Fixed font size on smaller screens

--- a/index.css
+++ b/index.css
@@ -129,6 +129,10 @@ img {
 }
 
 @media only screen and (max-width: 768px) {
+  body {
+    font-size: 0.5rem;
+  }
+  
   .board {
     height: 20em;
   }
